add homebridge shellscripts